[package]
name = "yle-tekstitv-gui"
version = "0.1.0"
authors = ["Miika Alikirri <miika.alik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
winit = { git = "https://github.com/Nykseli/winit", branch = "windows-mouse-fix" }

[dependencies]
base64 = "0.21.0"
serde_json = "1.0"
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["blocking"]}
html-escape = "0.2.9"
egui = { git = "https://github.com/Nykseli/egui" }
eframe = { git = "https://github.com/Nykseli/egui", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { git = "https://github.com/Nykseli/egui", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
log = "0.4.17"
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing = "0.1.37"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.61"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
